Footer Links, Header Links
Erased Z-index=-1 from css for header containers so buttons work. Added footer links, added anchor links to content within the same page. Erased Sedona content.

--- a/contact.html
+++ b/contact.html
@@ -39,8 +39,8 @@
                 <div>
                         <h1 class="animated fadeInDown">CONTACT US</h1>
                         <h2 class="animated fadeInDown">Comments, Questions, Concerns</h2>
-                        <a class="animated fadeInDown" id="inline" href=""><i class="fas fa-comments"></i> Leave a Comment</a>
-                        <a class="animated fadeInDown" id="inline" href=""><i class="fas fa-calendar-check"></i> Book Your Stay</a>
+                        <a class="animated fadeInDown" id="inline" href="#contact"><i class="fas fa-comments"></i> Leave a Comment</a>
+                        <a class="animated fadeInDown" id="inline" href="#book"><i class="fas fa-calendar-check"></i> Book Your Stay</a>
                 </div>
                 <div>
                 </div>
@@ -49,7 +49,7 @@
 
 
         <article>
-                <h1>Comments, Questions, Concerns</h1>
+                <h1 id="contact">Comments, Questions, Concerns</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem officia, enim repellendus nemo quidem
                         vel saepe, tempora consequatur repudiandae similique tenetur facere iusto? Dolores fugit minus
                         debitis harum rem fugiat! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt qui
@@ -67,7 +67,7 @@
                         reiciendis ratione sunt! Magni, enim eum distinctio debitis reiciendis modi delectus? Atque eum
                         alias iste illum!</p>
 
-                <h1>Book Here Now</h1>
+                <h1 id="book">Book Here Now</h1>
                 <iframe id="calendar" src="https://calendar.google.com/calendar/b/3/embed?showTitle=0&amp;showTabs=0&amp;mode=WEEK&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=micahefish%40gmail.com&amp;color=%231B887A&amp;ctz=America%2FPhoenix"
                         style="border:solid 1px #777" width="800" height="1200" frameborder="0" scrolling="no"></iframe>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure dolor, iusto doloribus culpa
@@ -104,15 +104,18 @@
         </article>
 
         <footer>
-                555 Main Street, Suite A | Nowhere, AZ 55555 | <a href="mailto: azsafari@gmail.com">azsafari@gmail.com</a>
-                | Tel: <a href="tel: 14807886570  ">480-788-6570 </a>
-                <p id="websitelinks"> <a href="#">HOME</a> | <a href="#">ADVENTURES</a> | <a href="#">GALLERY</a> | <a
-                                href="#">OUR STORY</a> | <a href="#">CONTACT US</a> </p>
-                        <a href="#"><img src="facebookIcon.png"></a>
-                        <a href="#"><img src="twitterIcon.png"></a>
-                        <a href="#"> <img src="instagramIcon.png"></a>
-                <p id="websitelinks">AZ Safari LLC &copy; 2018 All Rights Reserved</p>
-        </footer>
+                        Waddell, AZ 85355 | <a href="mailto: azsafari@gmail.com">azsafari@gmail.com</a> |
+                        Tel: <a href="tel: 14807886570  ">480-788-6570 </a>
+                        <p id="websitelinks"> 
+                            <a href="index.html">HOME</a> 
+                            | <a href="adventure.html">ADVENTURES</a> 
+                            | <a href="#">GALLERY</a>
+                            | <a href="story.html">OUR STORY</a> 
+                            | <a href="contact.html">CONTACT US</a> </p>
+                        <a href="https://www.facebook.com/az.safaricamp"><img src="facebookIcon.png"></a>
+                        <a href="https://twitter.com/az_safari"><img src="twitterIcon.png"></a>
+                        <a href="https://www.instagram.com/azsafaricamp/"> <img src="instagramIcon.png"></a>
+                    </footer>
 </body>
 
 </html>
