--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Grand Canyon Glamping|Tours & Hospitality</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="animate.css" />
@@ -41,7 +41,7 @@
             <h1 class="animated fadeInDown">AZ SAFARI CAMP</h1>
             <hr class="animated fadeInDown delay-1s" width="60%" noshade color="white" size="4px">
             <h2 class="animated fadeInDown">creating luxury experiences in the backcountry of America</h2>
-            <a class="animated fadeInDown" href=""><i class="fas fa-campground"></i> Explore Today</a>
+            <a class="animated fadeInDown" href="adventure.html"><i class="fas fa-campground"></i> Explore Today</a>
         </div>
         <div>
 
@@ -50,13 +50,17 @@
 
 
     <footer>
-        555 Main Street, Suite A | Nowhere, AZ 55555 | <a href="mailto: azsafari@gmail.com">azsafari@gmail.com</a> |
+        Waddell, AZ 85355 | <a href="mailto: azsafari@gmail.com">azsafari@gmail.com</a> |
         Tel: <a href="tel: 14807886570  ">480-788-6570 </a>
-        <p id="websitelinks"> <a href="#">HOME</a> | <a href="#">ADVENTURES</a> | <a href="#">GALLERY</a> | <a href="#">OUR
-                STORY</a> | <a href="#">CONTACT US</a> </p>
-            <a href="#"><img src="facebookIcon.png"></a>
-            <a href="#"><img src="twitterIcon.png"></a>
-            <a href="#"> <img src="instagramIcon.png"></a>
+        <p id="websitelinks"> 
+            <a href="index.html">HOME</a> 
+            | <a href="adventure.html">ADVENTURES</a> 
+            | <a href="#">GALLERY</a>
+            | <a href="story.html">OUR STORY</a> 
+            | <a href="contact.html">CONTACT US</a> </p>
+        <a href="https://www.facebook.com/az.safaricamp"><img src="facebookIcon.png"></a>
+        <a href="https://twitter.com/az_safari"><img src="twitterIcon.png"></a>
+        <a href="https://www.instagram.com/azsafaricamp/"> <img src="instagramIcon.png"></a>
     </footer>
 </body>
 
