--- a/story.html
+++ b/story.html
@@ -40,7 +40,7 @@
         <div>
             <h1 class="animated fadeInDown">OUR STORY</h1>
             <h2 class="animated fadeInDown">The Experience of a Lifetime in the Canyon.</h2>
-            <a href="#" class="animated fadeInDown"><i class="fas fa-calendar-check"></i> Book Now</a>
+            <a href="contact.html" class="animated fadeInDown"><i class="fas fa-calendar-check"></i> Book Now</a>
         </div>
         <div>
         </div>
@@ -159,15 +159,18 @@
     </article>
 
     <footer>
-        555 Main Street, Suite A | Nowhere, AZ 55555 | <a href="mailto: azsafari@gmail.com">azsafari@gmail.com</a> |
-        Tel: <a href="tel: 14807886570  ">480-788-6570 </a>
-        <p id="websitelinks"> <a href="#">HOME</a> | <a href="#">ADVENTURES</a> | <a href="#">GALLERY</a> | <a href="#">OUR
-                STORY</a> | <a href="#">CONTACT US</a> </p>
-            <a href="#"><img src="facebookIcon.png"></a>
-            <a href="#"><img src="twitterIcon.png"></a>
-            <a href="#"> <img src="instagramIcon.png"></a>
-        <p id="websitelinks">AZ Safari LLC &copy; 2018 All Rights Reserved</p>
-    </footer>
+            Waddell, AZ 85355 | <a href="mailto: azsafari@gmail.com">azsafari@gmail.com</a> |
+            Tel: <a href="tel: 14807886570  ">480-788-6570 </a>
+            <p id="websitelinks"> 
+                <a href="index.html">HOME</a> 
+                | <a href="adventure.html">ADVENTURES</a> 
+                | <a href="#">GALLERY</a>
+                | <a href="story.html">OUR STORY</a> 
+                | <a href="contact.html">CONTACT US</a> </p>
+            <a href="https://www.facebook.com/az.safaricamp"><img src="facebookIcon.png"></a>
+            <a href="https://twitter.com/az_safari"><img src="twitterIcon.png"></a>
+            <a href="https://www.instagram.com/azsafaricamp/"> <img src="instagramIcon.png"></a>
+        </footer>
 </body>
 
 </html>
